--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,9 @@
 [versions]
 agp = "8.9.3"
+coilCompose = "3.2.0"
+coilNetworkOkhttp = "3.2.0"
+converterGson = "2.4.0"
+converterScalars = "2.11.0"
 coreSplashscreen = "1.0.1"
 firebaseBom = "33.14.0"
 kotlin = "2.1.20"
@@ -11,6 +15,7 @@ lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
 composeBom = "2025.05.01"
 lifecycleViewmodelCompose = "2.9.0"
+material = "1.8.2"
 material3AdaptiveNavigationSuite = "1.4.0-alpha15"
 material3WindowSizeClass = "1.3.2"
 gms = "4.4.2"
@@ -30,16 +35,23 @@ navigationComposeVersion = "2.9.0"
 
 # serialization
 kotlinxSerializationJson = "1.8.1"
+okhttpVersion = "4.12.0"
+retrofit = "2.11.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+androidx-material = { module = "androidx.compose.material:material", version.ref = "material" }
 androidx-material-icons-core = { module = "androidx.compose.material:material-icons-core" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 androidx-material3-adaptive-navigation-suite = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3AdaptiveNavigationSuite" }
 androidx-material3-window-size-class1 = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3WindowSizeClass" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
+coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilNetworkOkhttp" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "converterScalars" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -59,6 +71,7 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3AdaptiveNavigationSuite" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttpBom" }
+okhttp-v3120 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttpVersion" }
 okhttp3-okhttp = { module = "com.squareup.okhttp3:okhttp" }
 
 # hilt
@@ -75,6 +88,7 @@ navigation-compose = { module = "androidx.navigation:navigation-compose", versio
 
 # serialization
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
