--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:enableOnBackInvokedCallback="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.ForkCast"
+        android:name=".ForkCastApplication"
         tools:targetApi="33">
         <activity
             android:name=".MainActivity"
